--- a/styles/globals.css
+++ b/styles/globals.css
@@ -110,6 +110,15 @@ a {
   width: 100%;
   height: 100vh;
 }
+.combobox-input{
+  width: 20px;
+  padding: 0.5rem;
+}
+/* .combobox{
+  width: 50%;
+  display: flex;
+  margin: 0 25% 0 25%;
+} */
 
 
 
